<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoviesMix</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_your_popcorn">Get your popcorn and let\'s choose a movie</string>
    <string name="start">GETTING STARTED</string>
    <string name="loading">Loading</string>
    <string name="next">Next</string>
    <string name="start1">Start</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome to Movies Mix\nBe ready, get your popcorn and let us choose a movie</string>
    <string name="trending">Now you can find the current trending movies easily</string>
    <string name="upcoming">See and find the upcoming movies and rate it now</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular">Popular</string>
    <string name="trending_title">Trends</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="favourite">Favourites</string>
    <string name="refresh">Refresh</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="no_network">No network connection!</string>
    <string name="trending_header">Trending movies today</string>
    <string name="trending_movies_today">Trending Movies Today</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="Arabic">العربية</string>
    <string name="about_moviesmix">About MoviesMix</string>
    <string name="open_source_licences">Open source licences</string>
    <string name="invalidate_session">Invalidate Session</string>
    <string name="invalidate_hint">This will remove all your local movies as favourite movies and offline cached images.</string>
    <string name="developed_with_love">Developed with ❤ by Mohamed Emad</string>
    <string name="follow_system">Follow system</string>
    <string name="unavilable">Unavailable Feature</string>
    <string name="grant">Grant Permission</string>
    <string name="cancel">Cancel</string>
    <string name="permission_needed">Permission needed</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No thanks</string>
    <string name="banner_image">Banner Image</string>
    <string name="poster_image">Poster Image</string>
    <string name="description">Description</string>
    <string name="genres">Genres</string>
    <string name="cast">Cast</string>
    <string name="related">Related</string>
    <string name="play_button">play Button</string>
    <string name="download">Download</string>
    <string name="video_not_available">No videos available for this movie!!</string>
    <string name="no_movies_found" formatted="true">No Results Found of %1$s</string>
    <string name="no_favourites_yet">No Favourites Yet</string>
</resources>