<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:saveEnabled="true"
    android:transitionGroup="true"
    android:background="?android:attr/colorBackground"
    tools:context=".ui.main.description.MovieDescriptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:saveEnabled="true">

        <ImageView
            android:id="@+id/details_banner_image"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:contentDescription="@string/banner_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/banner_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.varunest.sparkbutton.SparkButton
            android:id="@+id/button_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/heart_inactive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sparkbutton_activeImage="@drawable/heart_active"
            app:sparkbutton_iconSize="24dp"
            app:sparkbutton_inActiveImage="@drawable/heart_inactive"
            app:sparkbutton_primaryColor="@color/spark_primary_color"
            app:sparkbutton_secondaryColor="@color/secondaryColor" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/play_button"
            android:src="@drawable/ic_play_arrow_24"
            app:layout_constraintBottom_toBottomOf="@id/details_banner_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_banner_image" />

        <View
            android:id="@+id/center_divide"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:transitionGroup="true"
            app:cardElevation="0dp"
            app:layout_constraintCircleRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_banner_image">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/start_img_min"
                app:shapeAppearanceOverlay="@style/popularImageShape" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_movie_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@id/fabPlayButton"
            tools:ignore="SpUsage"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/text_rating"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:drawablePadding="6dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="8.5/10"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/star"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@id/text_movie_title" />


        <TextView
            android:id="@+id/text_release_date"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:drawablePadding="6dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="10 April 2020"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_time"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@id/text_rating" />


        <TextView
            android:id="@+id/heading_description"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/description"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_card"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/text_description"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:text="loreum ipsum dolor sit amet asd sa "
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_description"
            tools:ignore="SpUsage" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/text_genres"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_description" />

        <TextView
            android:id="@+id/heading_cast"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/cast"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_genres" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/heading_cast"
            tools:listitem="@layout/item_cast" />

        <TextView
            android:id="@+id/heading_related"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/related"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_cast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_related"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_related"
            tools:listitem="@layout/item_similar_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
